Updated code to use user defined to_categorical implementation

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -39,17 +39,17 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "0a2c7b74-e821-4ef1-86f4-f8266b168abe",
+        "outputId": "6c72c603-1d5b-4655-9c80-fe8a7c8fee47",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 70
         }
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "from keras.datasets import mnist\n",
-        "from keras.utils import to_categorical\n",
+        "#from keras.utils import to_categorical\n",
         "import numpy as np\n",
         "import matplotlib as plt\n",
         "\n",
@@ -63,6 +63,14 @@
             "Using TensorFlow backend.\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -80,7 +88,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "5bf0bee0-cded-4ce8-93a1-df243e23935f",
+        "outputId": "4413fef3-1c9a-4433-81ff-f97418215b53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -145,7 +153,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "c90fc97c-bdc3-4435-f4aa-5b3894a7f240",
+        "outputId": "ca95ecb8-e058-4e02-d014-8de3f7542584",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -197,6 +205,16 @@
       },
       "cell_type": "code",
       "source": [
+        "def to_categorical(labels,num_classes):\n",
+        "    result = []\n",
+        "    for i in labels:\n",
+        "      t = np.zeros(num_classes)\n",
+        "      t[i] = 1\n",
+        "      result.append(t)\n",
+        "    result = np.array(result)\n",
+        "    result = result.reshape(labels.shape[0],num_classes)\n",
+        "    return result\n",
+        "\n",
         "predict_train_labels_original = to_categorical(train_labels_original,10)\n",
         "predict_test_labels_original = to_categorical(test_labels_original,10)"
       ],
@@ -359,7 +377,7 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "113022fa-01f8-4962-d395-da6293b24872",
+        "outputId": "b00ce77f-f89d-4c09-d516-2139397b98c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 457
@@ -434,8 +452,8 @@
             "Digit 9 test accuracy : 96.05\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
-            "Overall train accuracy: 96.68116681277752 %\n",
-            "Overall test accuracy: 96.59699983894825 %\n",
+            "Overall train accuracy: 96.68116666666667 %\n",
+            "Overall test accuracy: 96.597 %\n",
             "Classifier with Strongest output is: 1\n"
           ],
           "name": "stdout"
