Updated code to use user defined to_categorical implementation

--- a/ML_Problem_3.ipynb
+++ b/ML_Problem_3.ipynb
@@ -39,20 +39,40 @@
       "metadata": {
         "id": "JKNPsLcH8Pq6",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "45406333-15d3-4c80-fa91-58d095ceb455"
       },
       "cell_type": "code",
       "source": [
         "import keras\n",
         "from keras.datasets import mnist\n",
         "import numpy as np\n",
-        "from keras.utils import to_categorical\n",
+        "#from keras.utils import to_categorical\n",
         "import matplotlib as plt\n",
         "\n",
         "(train_images_original, train_labels_original), (test_images_original, test_labels_original) = mnist.load_data()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+            "11493376/11490434 [==============================] - 0s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -68,7 +88,7 @@
       "metadata": {
         "id": "eX-Nbh48OFyv",
         "colab_type": "code",
-        "outputId": "ba6966bb-4f00-4815-c0e5-2db1b1ff06d0",
+        "outputId": "34f44802-c3d6-4c7e-b0f8-e663c4ece9a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -84,6 +104,16 @@
         "test_images = test_images.astype('float32') / 255\n",
         "test_images = test_images.T\n",
         "\n",
+        "def to_categorical(labels,num_classes):\n",
+        "    result = []\n",
+        "    for i in labels:\n",
+        "      t = np.zeros(num_classes)\n",
+        "      t[i] = 1\n",
+        "      result.append(t)\n",
+        "    result = np.array(result)\n",
+        "    result = result.reshape(labels.shape[0],num_classes)\n",
+        "    return result\n",
+        "  \n",
         "train_labels = to_categorical(train_labels_original,10)\n",
         "test_labels = to_categorical(test_labels_original,10)\n",
         "\n",
@@ -95,7 +125,7 @@
         "print(train_labels_original.shape)\n",
         "print(test_labels_original.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +227,7 @@
       "metadata": {
         "id": "-qLoZEeta8Fq",
         "colab_type": "code",
-        "outputId": "aa80ce66-1498-4981-bcf3-999c94a949a5",
+        "outputId": "adab2f82-28e9-4319-f4ab-bb79fc2d6186",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 404
@@ -251,33 +281,33 @@
         "  print(\"Training accuracy : {} %\".format(100 - np.mean(np.abs(train_labels_prediction - train_labels.T)) * 100))\n",
         "  print(\"Testing accuracy  : {} %\".format(100 - np.mean(np.abs(test_labels_prediction - test_labels.T)) * 100))"
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Loss at Epoch  0   0.08678900701856772\n",
-            "Loss at Epoch  1   0.058708707066656304\n",
-            "Loss at Epoch  2   0.046442500190412586\n",
-            "Loss at Epoch  3   0.03937971471463951\n",
-            "Loss at Epoch  4   0.034745240513284904\n",
-            "Loss at Epoch  5   0.03145774978675635\n",
-            "Loss at Epoch  6   0.028999937675183513\n",
-            "Loss at Epoch  7   0.027090882961609664\n",
-            "Loss at Epoch  8   0.02556411905224698\n",
-            "Loss at Epoch  9   0.024314455500147224\n",
-            "Loss at Epoch  10   0.023272051932326752\n",
-            "Loss at Epoch  11   0.022388679118929992\n",
-            "Loss at Epoch  12   0.021629947759072114\n",
-            "Loss at Epoch  13   0.020970675528919864\n",
-            "Loss at Epoch  14   0.020392002675689015\n",
-            "Loss at Epoch  15   0.019879529682623374\n",
-            "Loss at Epoch  16   0.01942207701286918\n",
-            "Loss at Epoch  17   0.019010836802237984\n",
-            "Loss at Epoch  18   0.01863877900447326\n",
-            "Loss at Epoch  19   0.018300227100461662\n",
-            "Training accuracy : 98.02166670560837 %\n",
-            "Testing accuracy  : 98.13400004059076 %\n"
+            "Loss at Epoch  0   0.08763154948870833\n",
+            "Loss at Epoch  1   0.059088294272153064\n",
+            "Loss at Epoch  2   0.04659512130376015\n",
+            "Loss at Epoch  3   0.03940860233539873\n",
+            "Loss at Epoch  4   0.034700702532337854\n",
+            "Loss at Epoch  5   0.031367122410666005\n",
+            "Loss at Epoch  6   0.028879307208277825\n",
+            "Loss at Epoch  7   0.02695027420082428\n",
+            "Loss at Epoch  8   0.025410047890178145\n",
+            "Loss at Epoch  9   0.02415129354083183\n",
+            "Loss at Epoch  10   0.02310280462663893\n",
+            "Loss at Epoch  11   0.022215452443724356\n",
+            "Loss at Epoch  12   0.021454239555601818\n",
+            "Loss at Epoch  13   0.020793563385120145\n",
+            "Loss at Epoch  14   0.0202142683881674\n",
+            "Loss at Epoch  15   0.01970174359325572\n",
+            "Loss at Epoch  16   0.019244656275625365\n",
+            "Loss at Epoch  17   0.01883408632393832\n",
+            "Loss at Epoch  18   0.018462920641917742\n",
+            "Loss at Epoch  19   0.018125420758855544\n",
+            "Training accuracy : 98.014 %\n",
+            "Testing accuracy  : 98.144 %\n"
           ],
           "name": "stdout"
         }
