Updated code to use user defined to_categorical implementation

--- a/ML_Problem_1.ipynb
+++ b/ML_Problem_1.ipynb
@@ -39,11 +39,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "85cebab2-4166-4d5c-853e-f1f78f4caca5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -55,16 +51,8 @@
         "\n",
         "(train_images_original, train_labels_original), (test_images_original, test_labels_original) = mnist.load_data()"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -80,7 +68,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "3f69f4ff-1da9-48f7-a72a-ef4e9b187dd9",
+        "outputId": "8b83acf6-1151-4a6f-9659-7a8b019e53ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -90,7 +78,7 @@
       "source": [
         "train_images_original.shape, train_labels_original, test_images_original.shape, test_labels_original.shape"
       ],
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -105,7 +93,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 11
         }
       ]
     },
@@ -145,7 +133,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "7192d72f-f0ce-4692-8f51-ef89e58737d7",
+        "outputId": "29d8721f-212e-4563-ed7c-991e92cfc4b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -156,7 +144,7 @@
         "print(train_images.shape)\n",
         "train_labels_original.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +163,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 13
         }
       ]
     },
@@ -257,7 +245,7 @@
         "#weight = np.random.randn(10,784)*0.01\n",
         "#bias = np.random.randn(10,1)*0.01\n",
         "\n",
-        "learn_rate = 0.1\n",
+        "learn_rate = 0.05\n",
         "batch_size = 50\n",
         "epochs = 20"
       ],
@@ -369,7 +357,7 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "9713d795-9b21-4c22-c949-37e8018f7fb0",
+        "outputId": "aba6311e-1cd7-4960-ec99-3a6fd0bb79eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 457
@@ -407,8 +395,8 @@
         "    test_acc_list.append(test_acc)\n",
         "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : \" + str(test_acc))\n",
         "     \n",
-        "  train_labels_original = keras.utils.to_categorical(train_labels_original, 10)\n",
-        "  test_labels_original = keras.utils.to_categorical(test_labels_original, 10)\n",
+        "  train_labels_original = to_categorical(train_labels_original, 10)\n",
+        "  test_labels_original = to_categorical(test_labels_original, 10)\n",
         "  print(train_labels_original.shape)\n",
         "  print(predict_train_labels_original.shape)\n",
         "    \n",
@@ -417,35 +405,35 @@
         "  print(\"Overall test accuracy: {} %\".format(100 - np.mean(np.abs(predict_test_labels_original - test_labels_original)) * 100))\n",
         "  print('Classifier with Strongest output is:', np.argmax(test_acc_list))\n"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Digit 0 train accuracy : 99.415 %\n",
-            "Digit 0 test accuracy : 99.28\n",
-            "Digit 1 train accuracy : 99.34666666666666 %\n",
-            "Digit 1 test accuracy : 99.37\n",
-            "Digit 2 train accuracy : 90.07 %\n",
-            "Digit 2 test accuracy : 89.68\n",
-            "Digit 3 train accuracy : 97.85333333333334 %\n",
-            "Digit 3 test accuracy : 98.01\n",
-            "Digit 4 train accuracy : 98.63666666666667 %\n",
-            "Digit 4 test accuracy : 98.36\n",
-            "Digit 5 train accuracy : 97.41166666666666 %\n",
-            "Digit 5 test accuracy : 97.64\n",
-            "Digit 6 train accuracy : 98.97166666666666 %\n",
-            "Digit 6 test accuracy : 98.77\n",
-            "Digit 7 train accuracy : 98.64833333333334 %\n",
-            "Digit 7 test accuracy : 98.55\n",
-            "Digit 8 train accuracy : 90.24833333333333 %\n",
-            "Digit 8 test accuracy : 90.26\n",
-            "Digit 9 train accuracy : 96.21 %\n",
-            "Digit 9 test accuracy : 96.05\n",
+            "Digit 0 train accuracy : 99.4 %\n",
+            "Digit 0 test accuracy : 99.2\n",
+            "Digit 1 train accuracy : 99.32166666666667 %\n",
+            "Digit 1 test accuracy : 99.42\n",
+            "Digit 2 train accuracy : 98.28 %\n",
+            "Digit 2 test accuracy : 98.13\n",
+            "Digit 3 train accuracy : 97.92166666666667 %\n",
+            "Digit 3 test accuracy : 98.08\n",
+            "Digit 4 train accuracy : 98.64833333333334 %\n",
+            "Digit 4 test accuracy : 98.39\n",
+            "Digit 5 train accuracy : 97.99666666666667 %\n",
+            "Digit 5 test accuracy : 98.05\n",
+            "Digit 6 train accuracy : 98.99166666666666 %\n",
+            "Digit 6 test accuracy : 98.81\n",
+            "Digit 7 train accuracy : 98.68833333333333 %\n",
+            "Digit 7 test accuracy : 98.59\n",
+            "Digit 8 train accuracy : 96.32 %\n",
+            "Digit 8 test accuracy : 96.16\n",
+            "Digit 9 train accuracy : 96.675 %\n",
+            "Digit 9 test accuracy : 96.43\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
-            "Overall train accuracy: 96.68116666666667 %\n",
-            "Overall test accuracy: 96.597 %\n",
+            "Overall train accuracy: 98.22433333333333 %\n",
+            "Overall test accuracy: 98.126 %\n",
             "Classifier with Strongest output is: 1\n"
           ],
           "name": "stdout"
