Updated code to use user defined to_categorical implementation

--- a/ML_Problem_2.ipynb
+++ b/ML_Problem_2.ipynb
@@ -39,7 +39,7 @@
       "metadata": {
         "id": "3UFi5pw44gHF",
         "colab_type": "code",
-        "outputId": "106535f7-ff10-4dff-bafb-9fe74f30768d",
+        "outputId": "6a0129bd-631a-4191-c142-a0ed57ebb1c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -49,7 +49,7 @@
       "source": [
         "import keras\n",
         "from keras.datasets import mnist\n",
-        "from keras.utils import to_categorical\n",
+        "#from keras.utils import to_categorical\n",
         "import numpy as np\n",
         "import matplotlib as plt\n",
         "\n",
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "jXW4rjttWjmh",
         "colab_type": "code",
-        "outputId": "ee9a5993-b5c6-4c57-a1fc-b6c628ef007d",
+        "outputId": "56b4e54b-ed70-43ca-8791-6283f0f89cfc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "K5imu-EeMP7s",
         "colab_type": "code",
-        "outputId": "9c0cff5d-431a-4bae-80d9-a9a0c7bfa21a",
+        "outputId": "e1a25f83-a21f-4cd4-e13d-4bbbc1e2dbaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "ftLmk4m649nN",
         "colab_type": "code",
-        "outputId": "a2de19d0-dd72-4b1f-dfba-6117f27b9142",
+        "outputId": "238a2e69-c2aa-41b7-8c8b-543df2716fbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -194,6 +194,16 @@
       },
       "cell_type": "code",
       "source": [
+        "def to_categorical(labels,num_classes):\n",
+        "    result = []\n",
+        "    for i in labels:\n",
+        "      t = np.zeros(num_classes)\n",
+        "      t[i] = 1\n",
+        "      result.append(t)\n",
+        "    result = np.array(result)\n",
+        "    result = result.reshape(labels.shape[0],num_classes)\n",
+        "    return result\n",
+        "\n",
         "predict_train_labels_original = to_categorical(train_labels_original,10)\n",
         "predict_test_labels_original = to_categorical(test_labels_original,10)\n",
         "predict_train_labels_original.shape\n"
@@ -366,7 +376,7 @@
       "metadata": {
         "id": "IaSda0dWnK-W",
         "colab_type": "code",
-        "outputId": "bd9413fa-7bbe-49f4-ba84-023cc082135b",
+        "outputId": "56ee2ec8-2880-4a8a-9828-32050b49dd69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 457
@@ -407,8 +417,8 @@
         "    print(\"Digit \" + str(digit_classifier) +\" test accuracy : \" + str(test_acc))\n",
         "\n",
         "     \n",
-        "  train_labels_original = keras.utils.to_categorical(train_labels_original, 10)\n",
-        "  test_labels_original = keras.utils.to_categorical(test_labels_original, 10)\n",
+        "  train_labels_original = to_categorical(train_labels_original, 10)\n",
+        "  test_labels_original = to_categorical(test_labels_original, 10)\n",
         "  print(train_labels_original.shape)\n",
         "  print(predict_train_labels_original.shape)\n",
         "    \n",
@@ -444,8 +454,8 @@
             "Digit 9 test accuracy : 96.5\n",
             "(60000, 10)\n",
             "(60000, 10)\n",
-            "Overall train accuracy: 97.94599991291761 %\n",
-            "Overall test accuracy: 97.99000006169081 %\n",
+            "Overall train accuracy: 97.946 %\n",
+            "Overall test accuracy: 97.99 %\n",
             "Classifier with Strongest output is: 1\n"
           ],
           "name": "stdout"
