--- a/HW2/Architecture_2_cifar10_data_set.ipynb
+++ b/HW2/Architecture_2_cifar10_data_set.ipynb
@@ -907,8 +907,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "In this architecture I have used 100 epochs, batch size 32 and four convolutiton layers with Dropout after every two layers. The learning rate is .0001 and this architecture performs better than the first architecture in terms of overfitting as shown in the plots.\n",
-        "The validation accuracy achieved is 77.05% "
+        "In this architecture I have trained the dataset with simple hold out validation [ training set (80%)\n",
+        "validation set (20%) ] for 100 epochs, batch size 32 and four convolutiton layers with Dropout after every two layers. The learning rate is .0001 and this architecture performs better than the first architecture in terms of overfitting as shown in the plots.\n",
+        "The performance evaluation of the model on validation set  is 77.05% "
       ]
     }
   ]
